--- a/FYP-web/Homepage/style.css
+++ b/FYP-web/Homepage/style.css
@@ -782,7 +782,6 @@ body {
 .carousel-slide {
   flex: 0 0 100%;
   height: 100%;
-  /* width: 400vw; */
   position: relative;
 }
 
@@ -1427,7 +1426,6 @@ footer a img {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    width: 100vh;
     padding: 20px;
     background-image: url("./assets/bg_move.png");
     background-size: 1200px;
@@ -1449,10 +1447,9 @@ footer a img {
     font-size: 20px;
   }
 
-  .carousel-wrapper {
+  /* .carousel-wrapper {
     height: 100vh;
-    width: 100vh;
-  }
+  } */
 
   .fypl-solo img,
   .fypl-left img,
