--- a/FYP-web/Homepage/style-fypl.css
+++ b/FYP-web/Homepage/style-fypl.css
@@ -110,11 +110,11 @@ body {
   overflow: hidden;
   background-color: #59282b;
   transition: height 0.5s ease;
-  margin-bottom: 1px; /* Add a small separation between carousels */
-  /* border-bottom: 1px solid rgba(255, 255, 255, 0.3); */
+  /* margin-bottom: 1px; Add a small separation between carousels */
+  /* border-bottom: 1px solid rgba(89, 40, 43, 0.3); */
   background-image: url('./assets/bg_move.png');
   animation: moveBackground 10s linear infinite;
-  background-size: 1805px;
+  background-size: 1225px;
 }
 
 /* School header styling */
@@ -289,10 +289,12 @@ body {
 /* Confetti container and animation */
 .confetti-container {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
+  /* top: 0; */
+  /* left: 0; */
+  width: 100vw;
   height: 100%;
+  transform: translateY(-42%);
+  /* transform: translateX(-30%); */
   pointer-events: none;
   z-index: 10;
 }
