--- a/FYP-web/Homepage/style-fypl.css
+++ b/FYP-web/Homepage/style-fypl.css
@@ -133,17 +133,17 @@ body {
 }
 
 .school-header h1 {
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  /* text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); */
   padding-bottom: 5px;
-  font-size: 48px;
+  font-size: 40px;
   text-align: center;
 }
 
 .school-header p {
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  /* text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); */
   padding-top: 8px;
   padding-bottom: 15px;
-  font-size: 24px;
+  font-size: 20px;
   text-align: center;
 }
 
@@ -216,7 +216,7 @@ body {
   margin: 8px 0;
   font-size: 16px;
   color: white;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  /* text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); */
 }
 
 .fypl-solo p:first-child {
@@ -386,6 +386,11 @@ footer a img {
   height: 50px;
 }
 
+/* tambahan */
+body > div:nth-child(3) > div.school-header > h1 {
+  padding-top: 5vh;
+}
+
 /* Responsive adjustments for different screen sizes */
 @media screen and (max-width: 1024px) {
   .school-header h1 {
@@ -493,7 +498,7 @@ footer a img {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     /* padding: 20px; */
     box-sizing: border-box;
@@ -503,7 +508,6 @@ footer a img {
     background-size: 1255px;
     color: white;
 }
-
 
   .carousel-nav.prev {
     left: 10px;
@@ -527,6 +531,10 @@ footer a img {
     height: 650px;
   }
 
+  body > div:nth-child(3) > div.school-header > h1 {
+    padding-top: 3vh;
+}
+
 }
 
 @media screen and (max-width: 480px) {
@@ -535,6 +543,11 @@ footer a img {
     height: 175px;
     border-bottom: 1px solid white;
   }
+
+
+  .container-fypl {
+    justify-content: space-between;
+}
 
   .fypl-solo {
     width: 160px;
@@ -574,7 +587,7 @@ footer a img {
   }
 
   body > div:nth-child(3) > div.school-header > h1{
-    padding-top: 5vh;
+    padding-top: 3vh;
   }
   
   .register-card h1 {
